--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -25,11 +25,16 @@ services:
       DB_NAME: sgu_db
       DB_USER: root
       DB_PASS: root
+      SERVER_SSL_ENABLED: true
+      SERVER_SSL_KEYSTORE: /etc/letsencrypt/live/localhost/keystore.p12
+      SERVER_SSL_PASS: changeit
     container_name: sgu-backend
     ports:
       - "8081:8080"
     networks:
       - sgu-net
+    volumes:
+      - certbot-conf:/etc/letsencrypt
     depends_on:
       - database
 
@@ -38,21 +43,26 @@ services:
     build:
       context: ./frontend
       args:
-      
         API_HOST: localhost 
         API_PORT: 8081  
         API_BASE: /api
+        API_PROTOCOL: https
     container_name: sgu-frontend
     ports:
-      - "3000:80"
+      - "80:80"
+      - "3000:443"
     networks:
       - sgu-net
+    volumes:
+      - certbot-conf:/etc/letsencrypt
     depends_on:
       - backend
 
 volumes:
   sgu-volume:
     name: sgu-volume
+  certbot-conf:
+    external: true
 
 networks:
   sgu-net:
