--- a/frontend/Dockerfile
+++ b/frontend/Dockerfile
@@ -11,10 +11,13 @@ COPY . .
 ARG API_HOST
 ARG API_PORT
 ARG API_BASE
+ARG API_PROTOCOL
 
 ENV VITE_API_HOST=$API_HOST
 ENV VITE_API_PORT=$API_PORT
 ENV VITE_API_BASE=$API_BASE
+ENV VITE_API_PROTOCOL=$API_PROTOCOL
+
 
 RUN npm run build
 
@@ -22,4 +25,8 @@ FROM nginx:alpine
 
 COPY --from=build /app/dist /usr/share/nginx/html
 
+COPY ./nginx.conf /etc/nginx/nginx.conf
+
 EXPOSE 80
+
+CMD ["nginx", "-g", "daemon off;"]
