--- a/server/src/main/resources/application.properties
+++ b/server/src/main/resources/application.properties
@@ -10,3 +10,8 @@ db.port=${DB_PORT}
 db.name=${DB_NAME}
 db.user=${DB_USER}
 db.pass=${DB_PASS}
+
+server.ssl.enabled=${SERVER_SSL_ENABLED}
+server.ssl.keystore=${SERVER_SSL_KEYSTORE}
+server.ssl.keystore-password=${SERVER_SSL_PASS}
+server.ssl.keystore-type=PKCS12
